Update solr.md